--- a/MyFirstIOSApp/Base.lproj/Main.storyboard
+++ b/MyFirstIOSApp/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="ipad12_9rounded" orientation="portrait" layout="fullscreen" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -13,41 +13,36 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MyFirstIOSApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="t1000" translatesAutoresizingMaskIntoConstraints="NO" id="fyt-zU-iN5">
-                                <rect key="frame" x="139" y="118" width="137" height="178"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="178" id="gVu-x9-XJY"/>
-                                </constraints>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="      hail swift comp" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x9g-v1-yVS">
-                                <rect key="frame" x="74" y="319" width="233" height="36"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="      hail swift comp" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x9g-v1-yVS">
+                                <rect key="frame" x="396" y="665" width="232.5" height="36"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="t1000" translatesAutoresizingMaskIntoConstraints="NO" id="fyt-zU-iN5">
+                                <rect key="frame" x="442" y="405" width="140" height="160"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="140" id="52t-RO-MTE"/>
+                                    <constraint firstAttribute="height" constant="160" id="Bxe-MF-Fjq"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemIndigoColor"/>
                         <constraints>
-                            <constraint firstItem="fyt-zU-iN5" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="74" id="11j-df-ioG"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="fyt-zU-iN5" secondAttribute="trailing" constant="138" id="1MK-QU-KEb"/>
-                            <constraint firstItem="fyt-zU-iN5" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="139" id="7Jg-dA-hYr"/>
-                            <constraint firstItem="fyt-zU-iN5" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="74" id="LDS-PE-S5p"/>
-                            <constraint firstItem="fyt-zU-iN5" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" constant="0.5" id="ODz-vV-xgv"/>
-                            <constraint firstItem="fyt-zU-iN5" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="74" id="P9O-BY-P7q"/>
-                            <constraint firstItem="x9g-v1-yVS" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" constant="-16.5" id="SPV-XK-Cx5"/>
-                            <constraint firstItem="fyt-zU-iN5" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="74" id="kqf-7i-zhc"/>
-                            <constraint firstItem="fyt-zU-iN5" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" constant="0.5" id="qLv-sL-gdd"/>
-                            <constraint firstItem="x9g-v1-yVS" firstAttribute="top" secondItem="fyt-zU-iN5" secondAttribute="bottom" constant="23" id="vkC-6c-Ohk"/>
+                            <constraint firstItem="x9g-v1-yVS" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="2M0-QZ-H7n"/>
+                            <constraint firstItem="fyt-zU-iN5" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="GrB-9S-Gma"/>
+                            <constraint firstItem="x9g-v1-yVS" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="UMd-BF-bAS"/>
+                            <constraint firstItem="x9g-v1-yVS" firstAttribute="top" secondItem="fyt-zU-iN5" secondAttribute="bottom" constant="100" id="v9W-Qb-io7"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="15.420560747663551" y="80.345572354211669"/>
+            <point key="canvasLocation" x="14.492753623188406" y="79.6875"/>
         </scene>
     </scenes>
     <resources>
