--- a/My First iOS App/My First iOS App/Base.lproj/Main.storyboard
+++ b/My First iOS App/My First iOS App/Base.lproj/Main.storyboard
@@ -16,32 +16,40 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="t1000" translatesAutoresizingMaskIntoConstraints="NO" id="GkX-P5-wzv">
-                                <rect key="frame" x="107" y="144" width="200" height="400"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="200" id="vnC-HQ-74L"/>
-                                </constraints>
-                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hail Swift Camp" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C8G-B3-NtE">
-                                <rect key="frame" x="84" y="538" width="246" height="43"/>
+                                <rect key="frame" x="84" y="426.5" width="246" height="43"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="246" id="EOl-BO-Sbi"/>
+                                    <constraint firstAttribute="height" constant="43" id="iBw-8o-i7T"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="36"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="t1000" translatesAutoresizingMaskIntoConstraints="NO" id="GkX-P5-wzv">
+                                <rect key="frame" x="7" y="182.5" width="400" height="194"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="400" id="Jqv-U3-q1g"/>
+                                    <constraint firstAttribute="height" constant="194" id="fw1-aR-9du"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemIndigoColor"/>
                         <constraints>
-                            <constraint firstItem="GkX-P5-wzv" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="M2O-Eu-MUw"/>
-                            <constraint firstItem="GkX-P5-wzv" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="100" id="OHb-FJ-3fc"/>
-                            <constraint firstItem="C8G-B3-NtE" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="494" id="UHf-E9-FUG"/>
-                            <constraint firstItem="C8G-B3-NtE" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="k7s-Zz-dP6"/>
+                            <constraint firstItem="GkX-P5-wzv" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="6sw-5B-q95"/>
+                            <constraint firstItem="C8G-B3-NtE" firstAttribute="top" secondItem="GkX-P5-wzv" secondAttribute="bottom" constant="50" id="GtW-bH-1Z3"/>
+                            <constraint firstItem="C8G-B3-NtE" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="K2S-AX-UOH"/>
+                            <constraint firstItem="GkX-P5-wzv" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="7" id="XG5-5S-bK7"/>
+                            <constraint firstItem="C8G-B3-NtE" firstAttribute="top" secondItem="GkX-P5-wzv" secondAttribute="bottom" constant="50" id="clF-hz-izy"/>
+                            <constraint firstItem="GkX-P5-wzv" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="138.5" id="skd-6K-VS7"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="GkX-P5-wzv" secondAttribute="trailing" constant="7" id="xDn-HW-lU5"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="20" y="83"/>
+            <point key="canvasLocation" x="18.840579710144929" y="82.366071428571431"/>
         </scene>
     </scenes>
     <resources>
