--- a/My First iOS App/My First iOS App/Base.lproj/Main.storyboard
+++ b/My First iOS App/My First iOS App/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="ipad12_9" orientation="portrait" layout="fullscreen" appearance="light"/>
+    <device id="ipad10_5" orientation="portrait" layout="fullscreen" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -13,34 +13,25 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="My_First_iOS_App" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
+                        <rect key="frame" x="0.0" y="0.0" width="834" height="1112"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hail Swift Camp" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aYm-aZ-F2o">
-                                <rect key="frame" x="389" y="403" width="246" height="560"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Hail Swift Camp" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aYm-aZ-F2o">
+                                <rect key="frame" x="294" y="427" width="246" height="43"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="36"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="t1000.jpeg" translatesAutoresizingMaskIntoConstraints="NO" id="ZYP-lK-bBH">
-                                <rect key="frame" x="412" y="-43" width="200" height="1034"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="2VI-Q8-2Xm"/>
-                                    <constraint firstAttribute="width" constant="200" id="mo5-Yw-o6h"/>
-                                </constraints>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" ambiguous="YES" image="t1000.jpeg" translatesAutoresizingMaskIntoConstraints="NO" id="ZYP-lK-bBH">
+                                <rect key="frame" x="217" y="213" width="400" height="188"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemIndigoColor"/>
                         <constraints>
-                            <constraint firstItem="aYm-aZ-F2o" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="4l8-yO-ain"/>
-                            <constraint firstItem="aYm-aZ-F2o" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="5Hv-H8-SFm"/>
-                            <constraint firstItem="ZYP-lK-bBH" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="9i3-gh-G0c"/>
-                            <constraint firstItem="ZYP-lK-bBH" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="LNE-GR-6Ol"/>
-                            <constraint firstItem="ZYP-lK-bBH" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="-63" id="bcb-6l-31H"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="ZYP-lK-bBH" secondAttribute="bottom" constant="375" id="dCR-mN-84M"/>
-                            <constraint firstItem="aYm-aZ-F2o" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="383" id="hCJ-3p-aUE"/>
-                            <constraint firstItem="aYm-aZ-F2o" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="uSn-cP-pTm"/>
+                            <constraint firstItem="aYm-aZ-F2o" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Mn0-JD-7ed"/>
+                            <constraint firstItem="ZYP-lK-bBH" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Ygg-Yu-VGf"/>
+                            <constraint firstItem="aYm-aZ-F2o" firstAttribute="top" secondItem="ZYP-lK-bBH" secondAttribute="bottom" constant="26" id="xQS-Bg-xX4"/>
                         </constraints>
                     </view>
                 </viewController>
