--- a/MyFirstApp/Base.lproj/Main.storyboard
+++ b/MyFirstApp/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -14,32 +14,36 @@
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MyFirstApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" heightSizable="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Hail Swift Camp" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CYS-BP-g3X">
-                                <rect key="frame" x="84" y="568" width="246" height="43"/>
-                                <rect key="contentStretch" x="0.0" y="0.0" width="0.0" height="0.0"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="t1000" translatesAutoresizingMaskIntoConstraints="NO" id="3bO-0b-FqE">
+                                <rect key="frame" x="7" y="179" width="400" height="172"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="400" id="3gH-hw-uYe"/>
+                                    <constraint firstAttribute="height" constant="172" id="7Jp-3z-mba"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hail Swift Camp" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dqV-0s-93J">
+                                <rect key="frame" x="84" y="388" width="246" height="43"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="36"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" ambiguous="YES" misplaced="YES" image="t1000" translatesAutoresizingMaskIntoConstraints="NO" id="4IZ-K1-8gh">
-                                <rect key="frame" x="72" y="221" width="271" height="311"/>
-                                <rect key="contentStretch" x="0.0" y="0.0" width="0.0" height="0.0"/>
-                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemIndigoColor"/>
                         <rect key="contentStretch" x="0.0" y="0.0" width="0.0" height="0.0"/>
                         <constraints>
-                            <constraint firstItem="CYS-BP-g3X" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="E1v-id-UZg"/>
-                            <constraint firstItem="4IZ-K1-8gh" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ff3-Jh-L1E"/>
+                            <constraint firstItem="3bO-0b-FqE" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="135" id="3iD-Gj-gny"/>
+                            <constraint firstItem="3bO-0b-FqE" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="FmG-w1-W0C"/>
+                            <constraint firstItem="dqV-0s-93J" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="cYM-KH-S9p"/>
+                            <constraint firstItem="dqV-0s-93J" firstAttribute="top" secondItem="3bO-0b-FqE" secondAttribute="bottom" constant="37" id="z1H-cv-AHJ"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="18.840579710144929" y="81.696428571428569"/>
+            <point key="canvasLocation" x="13.043478260869566" y="79.6875"/>
         </scene>
     </scenes>
     <resources>
