--- a/My First iOS App/My First iOS App/Base.lproj/Main.storyboard
+++ b/My First iOS App/My First iOS App/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="ipad10_5" orientation="portrait" layout="fullscreen" appearance="light"/>
+    <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -13,35 +13,40 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="My_First_iOS_App" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="834" height="1112"/>
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Hail Swift Camp" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aYm-aZ-F2o">
-                                <rect key="frame" x="294" y="427" width="246" height="43"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hail Swift Camp" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JZ7-qJ-JXC">
+                                <rect key="frame" x="72" y="443" width="246" height="43"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="36"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" ambiguous="YES" image="t1000.jpeg" translatesAutoresizingMaskIntoConstraints="NO" id="ZYP-lK-bBH">
-                                <rect key="frame" x="217" y="213" width="400" height="188"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="t1000" translatesAutoresizingMaskIntoConstraints="NO" id="N5X-2I-ylz">
+                                <rect key="frame" x="65.666666666666686" y="124" width="259" height="259"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="259" id="X1s-jd-9Bs"/>
+                                    <constraint firstAttribute="width" constant="259" id="sGw-Fc-8gt"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemIndigoColor"/>
                         <constraints>
-                            <constraint firstItem="aYm-aZ-F2o" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Mn0-JD-7ed"/>
-                            <constraint firstItem="ZYP-lK-bBH" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Ygg-Yu-VGf"/>
-                            <constraint firstItem="aYm-aZ-F2o" firstAttribute="top" secondItem="ZYP-lK-bBH" secondAttribute="bottom" constant="26" id="xQS-Bg-xX4"/>
+                            <constraint firstItem="N5X-2I-ylz" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="80" id="57h-h5-SlS"/>
+                            <constraint firstItem="JZ7-qJ-JXC" firstAttribute="top" secondItem="N5X-2I-ylz" secondAttribute="bottom" constant="60" id="DJg-pv-4qG"/>
+                            <constraint firstItem="JZ7-qJ-JXC" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="I7p-dQ-yAI"/>
+                            <constraint firstItem="N5X-2I-ylz" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="VHl-H6-obU"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="18.840579710144929" y="68.973214285714278"/>
+            <point key="canvasLocation" x="18.840579710144929" y="69.642857142857139"/>
         </scene>
     </scenes>
     <resources>
-        <image name="t1000.jpeg" width="400" height="400"/>
+        <image name="t1000" width="400" height="400"/>
         <systemColor name="systemIndigoColor">
             <color red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
